Fixed white space in header and body

--- a/css/theme.less
+++ b/css/theme.less
@@ -9,6 +9,7 @@ body {
      font-size: @base-font-size;
      line-height: @base-line-height;
      color: @primary-text;
+
    }
 
 .container{
@@ -17,14 +18,14 @@ body {
 
    .header .container {
      background: @primary-background;
-     padding-left: 0;
-     padding-right: 0;
+     padding: 50px 50px 100px 50px;
+
 }
 
-.header {
-     padding: (@padding * 4) 0;
-
- }
+// .header {
+//      padding: (@padding * 4) 0;
+//
+//  }
 
 .main-nav {
      line-height: 36px; // vertical center with logo
@@ -40,6 +41,7 @@ body {
 
 .main-nav a {
      text-decoration: none;
+     color: @aqua2;
 }
 
 .main-nav a:hover {
@@ -124,7 +126,7 @@ body {
 
  h3 {
      font-weight: 700;
-     color: @red1;
+     color: @aqua2;
 }
 
 h4 {
@@ -138,7 +140,7 @@ h4 {
 }
 
 .price {
-     color: @red1;
+     color: @aqua2;
      font-weight: 700;
 }
 
